include $(top_srcdir)/gnome-doc-utils.make
dist-hook: doc-dist-hook

DOC_MODULE = gdm
DOC_ENTITIES = 
DOC_INCLUDES = legal.xml

DOC_LINGUAS = es ko uk

# Translations need migration to use gnome-doc-utils.
# See page http://live.gnome.org/GnomeDocUtilsTranslationMigration
SUBDIRS = . de es fr it ja zh_CN zh_HK zh_TW

man_MANS = gdm.1

EXTRA_DIST = gdm.1
